@@ -1,6 +1,6 @@
 4.0.0
 =====
-28 October 2024
+29 October 2024
 - Introduce Gwen processes to support multiple launch configurations
   - `-p|--process` option
 - Require Java 17+ instead of Java 11+
@@ -8,6 +8,7 @@
 - Use logback instead of log4j for logging
 - Support `empty` literal in DSLs wherever `blank` is accepted
 - Make all input data read only by default
+- Added `--repl` option to open REPL regardless of batch and feature options
 - Internal engine enhancements
   - Replace internal stack of data caches with a single data cache
   - Manage settings internally without exposing them as system properties
